--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devconnector",
+  "name": "almawadeh",
   "version": "1.0.0",
   "description": "Social network for developers",
   "main": "server.js",
@@ -23,7 +23,13 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
-    "normalize-url": "^5.0.0"
+    "normalize-url": "^5.0.0",
+    "connect": "^3.7.0",
+    "js-yaml": "^3.13.1",
+    "knex": "0.21.1",
+    "pg": "8.2.1",
+    "serve-static": "1.14.1",
+    "swagger-tools": "^0.10.1"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
