--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "almawadeh",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.x"
+  },
   "description": "Social network for developers",
   "main": "server.js",
   "scripts": {
