--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Brad Traversy",
+  "keywords": [
+    "swagger"
+  ],
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
